Fix horizontal scroll

--- a/Yen-Chen Lin Website_files/style.css
+++ b/Yen-Chen Lin Website_files/style.css
@@ -51,7 +51,7 @@ html, body {
   position: absolute;
   left: 27%;
   top: 165px;
-  width: 80%;
+  width: 60%;
 }
 #headertext {
   font-size: 26px;
